about part heading updated

--- a/index.html
+++ b/index.html
@@ -77,12 +77,11 @@
     <section id="about">
         <div class="container">
             <div class="section_heading">
-                <h2>About US</h2>
+                <h2>About US heading updated</h2>
                 <p>
                     Divide have don't man wherein air fourth. Own itself make have night won't make.
                     A you under Seed appear which good give. Own give air without fowl moveth dry first
                     heaven fruit, dominion she'd won't very all.
-
                 </p>
             </div>
 
