css file edited, hading updated, new image added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section id="about">
         <div class="container">
             <div class="section_heading">
-                <h2>About US heading updated</h2>
+                <h2>About US heading</h2>
                 <p>
                     Divide have don't man wherein air fourth. Own itself make have night won't make.
                     A you under Seed appear which good give. Own give air without fowl moveth dry first
